# Makepro

./: .gitignore  .makepro.css.swp  LICENSE  README.md  makepro  makepro.css  pyproject.toml
.github/workflows/: ci.yml  license.yml
src/makepro/: .nvimlog  __init__.py  __main__.py  app.py  file_manager.py  makepro  makepro.tcss
src/makepro/config/: __init__.py
src/makepro/core/: __init__.py
src/makepro/events/: __init__.py
src/makepro/render/: __init__.py  screen.py
src/makepro/terminal/: __init__.py  raw_mode.py
src/makepro/ui/: __init__.py
src/makepro/utils/: textstyle.py
tests/: render_smoke.py
utils/: __init__.py
