[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "makepro"
version = "0.1.0"
description = "A lightweight terminal IDE"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "noirAnayCO" }
]
license = { text = "MIT" }

[project.scripts]
makepro = "makepro.app:main"

[tool.setuptools.packages.find]
where = ["src"]